@startuml

title __AIRPORTMANAGER-BACKEND's Class Diagram__\n

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    interface pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    interface pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    interface pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    interface pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    namespace impl {
      class pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.AirPlaneDBimpl {
      }
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    namespace impl {
      class pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.AirportDBException {
      }
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    namespace impl {
      class pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.DestinationDBimpl {
      }
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    namespace impl {
      class pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.FlightDBimpl {
      }
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.daos {
    namespace impl {
      class pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.StewardDBimpl {
      }
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.EntityDTOTransformer {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.entities {
    class pl.edu.uj.ii.ionb.airportmanager.backend.entities.Steward {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.backend.services.impl {
    class pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl {
    }
  }
  

  pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.AirPlaneDBimpl .up.|> pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB
  pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.AirportDBException -up-|> javax.persistence.PersistenceException
  pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.DestinationDBimpl .up.|> pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB
  pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.FlightDBimpl .up.|> pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB
  pl.edu.uj.ii.ionb.airportmanager.backend.daos.impl.StewardDBimpl .up.|> pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Airplane : airplane
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination : origin
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Flight o-- pl.edu.uj.ii.ionb.airportmanager.backend.entities.Destination : target
  pl.edu.uj.ii.ionb.airportmanager.backend.entities.Steward .up.|> java.io.Serializable
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.AirplaneService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.AirplaneServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB : AirPlaneDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.DestinationService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.DestinationServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB : destinationDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.FlightService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.AirPlaneDB : AirPlaneDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.DestinationDB : destinationDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB : flightDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.FlightServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB : stewardDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl .up.|> pl.edu.uj.ii.ionb.airportmanager.services.StewardService
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.FlightDB : flightDB
  pl.edu.uj.ii.ionb.airportmanager.backend.services.impl.StewardServiceImpl o-- pl.edu.uj.ii.ionb.airportmanager.backend.daos.StewardDB : stewardDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
